Added and styled left column links

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,9 @@
 @import './base/_base';
 @import './base/_typography';
 
+@import './layout/side-bar';
+
 @import './components/menu-button';
 @import './components/_menu-icon';
+@import './components/quick-links';
+@import './components/quick-link';
