--- a/src/styles/components/_menu-button.scss
+++ b/src/styles/components/_menu-button.scss
@@ -3,6 +3,7 @@
     background-color:$mainBlueDark;
     padding-top:45px;
     text-align:center;
+    cursor:pointer;
 
     &__text{
         margin-top:20px;
