--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './abstracts/_variables';
+@import './abstracts/mixins';
 
 @import './base/_base';
 @import './base/_typography';
@@ -9,3 +10,7 @@
 @import './components/_menu-icon';
 @import './components/quick-links';
 @import './components/quick-link';
+@import './components/header';
+@import './components/wrapper';
+@import './components/search';
+@import './components/jumbotron';
