Added home page text and golf course image

--- a/src/styles/components/_wrapper.scss
+++ b/src/styles/components/_wrapper.scss
@@ -3,5 +3,9 @@
     margin:0 auto;
     position:relative;
 
+    &--extra-right-padding{
+        padding-right:300px;
+    }
+
     @include clearfix;
 }
