--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,12 +5,15 @@
 @import './base/_typography';
 
 @import './layout/side-bar';
+@import './layout/page-content';
 
 @import './components/menu-button';
-@import './components/_menu-icon';
+@import './components/menu-icon';
 @import './components/quick-links';
 @import './components/quick-link';
 @import './components/header';
 @import './components/wrapper';
 @import './components/search';
 @import './components/jumbotron';
+@import './components/blurb';
+@import './components/line-break';
