Completed amenities grid

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,3 +3,5 @@ $mainBlueDark: #013044;
 $offWhite: #EEE7D5;
 $beige:#bfb69f;
 $defaultTextColor: #584f48;
+$amenityBackground:#00497c;
+$amenityTextColor: #f0f4f6;
