--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,4 @@
 @import './components/jumbotron';
 @import './components/blurb';
 @import './components/line-break';
+@import './components/amenities-grid';
