--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -5,3 +5,10 @@
         display:table;
     }
 }
+
+@mixin absoluteCenter{
+       position: absolute;
+        top:50%;
+        left:50%;
+        transform:translate(-50%, -50%);
+}
