Added Membership block

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -10,3 +10,7 @@ font-family: 'Open Sans', sans-serif;*/
     font-weight: 600;
     color:$offWhite;
 }
+
+.center-text{
+    text-align: center;
+}
