--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,3 +18,7 @@
 @import './components/blurb';
 @import './components/line-break';
 @import './components/amenities-grid';
+@import './components/row';
+@import './components/join-block';
+@import './components/membership-block';
+@import './components/btn';
