Completed club news section and began to add footer section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,8 @@
 @import './components/join-block';
 @import './components/membership-block';
 @import './components/btn';
+@import './components/club-news';
+@import './components/news-item';
+@import './components/calendar-item';
+@import './components/overlay-link';
+@import './components/footer';
