--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -10,7 +10,7 @@
         content:'';
         width:100%;
         height:7px;
-        background-image:url('/images/header_bottom.png');
+        background-image:url('/images/frills.png');
         background-repeat:repeat-x;
         display:block;
         position:absolute;
