--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,5 @@
 @import './components/calendar-item';
 @import './components/overlay-link';
 @import './components/footer';
+@import './components/contact-info';
+@import './components/social-links';
