--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -12,3 +12,17 @@
         left:50%;
         transform:translate(-50%, -50%);
 }
+
+@mixin bottomFrills{
+    &::after{
+        content:'';
+        width:100%;
+        height:7px;
+        background-image:url('/images/frills.png');
+        background-repeat:repeat-x;
+        display:block;
+        position:absolute;
+        bottom:-7px;
+        left:0px;
+    }
+}
