--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -6,3 +6,5 @@ $defaultTextColor: #584f48;
 $amenityBackground:#00497c;
 $amenityTextColor: #f0f4f6;
 $newsBorderColor: #d5cdb8;
+$footerTextColor: #756047;
+$footerMemberColor: #f2ecda;
