--- a/src/styles/components/_club-news.scss
+++ b/src/styles/components/_club-news.scss
@@ -5,16 +5,8 @@
     padding:100px 0 150px 0;
     position:relative;
 
-    &::after{
-        content:'';
-        width:100%;
-        height:7px;
-        background-image:url('/images/frills.png');
-        background-repeat:repeat-x;
-        display:block;
-        position:absolute;
-        bottom:-7px;
-    }
+    @include bottomFrills;
+    
 
     &__heading{
         position:relative;
