--- a/src/styles/components/_social-links.scss
+++ b/src/styles/components/_social-links.scss
@@ -4,7 +4,8 @@
 
     & a{
         margin-right:27px;
-    
+        color:inherit;
+
         &:last-of-type{
             margin-right:0;
         }
