--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -18,7 +18,7 @@
         content:'';
         width:100%;
         height:7px;
-        background-image:url('/images/frills.png');
+        background-image: url('../images/frills.png');
         background-repeat:repeat-x;
         display:block;
         position:absolute;
