--- a/src/styles/components/_amenities-grid.scss
+++ b/src/styles/components/_amenities-grid.scss
@@ -21,23 +21,23 @@
 
         &--large{
             height:100%;
-            background-image: url('/images/golf.png');
+            background-image: url('../images/golf.png');
         }
 
         &--fitness{
-            background-image: url('/images/fitness.png');
+            background-image: url('../images/fitness.png');
         }
 
         &--pool{
-            background-image: url('/images/pool.png');
+            background-image: url('../images/pool.png');
         }
 
         &--tennis{
-            background-image: url('/images/tennis.png');
+            background-image: url('../images/tennis.png');
         }
 
         &--events{
-            background-image: url('/images/special_events.png');
+            background-image: url('../images/special_events.png');
         }
     }
 
