--- a/src/styles/components/_blurb.scss
+++ b/src/styles/components/_blurb.scss
@@ -1,7 +1,7 @@
 .blurb{
     padding-top:70px;
     padding-bottom:70px;
-    background-image: url('/images/home-text-bg.png');
+    background-image: url('../images/home-text-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     text-align:center;
