--- a/src/styles/components/_club-news.scss
+++ b/src/styles/components/_club-news.scss
@@ -1,5 +1,5 @@
 .club-news{
-    background-image:url('/images/news-bg.png');
+    background-image: url('../images/news-bg.png');
     background-position:center;
     background-size:cover;
     padding:100px 0 150px 0;
