--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header{
     width:100%;
     height:74px;
-    background-image: url('/images/header_bg.png');
+    background-image: url('../images/header_bg.png');
     background-repeat: repeat-x;
     position:relative;
     z-index:1;
