--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,6 +2,7 @@
     width:100%;
     height:74px;
     background-image: url('../images/header_bg.png');
+    //background-color:orangered;
     background-repeat: repeat-x;
     position:relative;
     z-index:1;
