--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,3 +29,4 @@
 @import './components/footer';
 @import './components/contact-info';
 @import './components/social-links';
+@import './components/nav-menu';
