--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 
 @import './layout/side-bar';
 @import './layout/page-content';
+@import './layout/hidden';
 
 @import './components/menu-button';
 @import './components/menu-icon';
