--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,7 +7,11 @@
 }
 
 html{
-    font-size:62.5%;
+    font-size: 50%;
+
+    @include responsive(large){
+        font-size: 62.5%;
+    }
 }
 
 body{
@@ -15,6 +19,6 @@ body{
     //overflow:hidden;
 }
 
-.hidden{
-    display:none !important;
-}
+// .hidden{
+//     display:none !important;
+// }
