--- a/src/styles/components/_blurb.scss
+++ b/src/styles/components/_blurb.scss
@@ -24,12 +24,26 @@
     }
 
     &__golf-course{
-        position:absolute;
-        bottom:-45px;
-        right:0;
+        margin:20px auto 0 auto;
+        width:50%;
+        max-width:200px;
+
+
+        @include responsive(large){
+            position:absolute;
+            top:-155px;
+            right:0;
+            margin-top:0;
+            width:auto;
+            max-width: none;    
+        }
+
+        & a{
+            display:block;
+        }
 
         & img{
-            display:block;
+            width:100%;
         }
     }
 }
