--- a/src/styles/components/_jumbotron.scss
+++ b/src/styles/components/_jumbotron.scss
@@ -1,5 +1,11 @@
 .jumbotron{
 
+    padding-top:74px;
+
+    @include responsive(large){
+        padding-top:0px;
+    }
+
     &__image{
         width:100%;
         display:block;
