--- a/src/styles/components/_membership-block.scss
+++ b/src/styles/components/_membership-block.scss
@@ -18,9 +18,14 @@
         text-decoration: none;
         border-radius:5px;
         font-family: 'EB Garamond', serif;
+        color:$offWhite;
 
         &:visited{
             color:$offWhite;
         }
+    }
+
+    &__name-image{
+        max-width:100%;
     }
 }
