--- a/src/styles/components/_menu-button.scss
+++ b/src/styles/components/_menu-button.scss
@@ -1,14 +1,31 @@
 .menu-button{
-    height:149px;
+    position:fixed;
+    height:74px;
+    width:72px;
     background-color:$mainBlueDark;
-    padding-top:45px;
+    //padding-top:20px;
     text-align:center;
     cursor:pointer;
-    position:relative;
-    z-index:1;
+    //position:relative;
+    z-index:3;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+
+    @include responsive(large){
+        height:149px;
+        width:144px;
+    }
 
     &__text{
         margin-top:20px;
+        display:none;
+
+        @include responsive(large){
+            display:block;
+        }
     }
 
     &:hover{
