--- a/src/styles/components/_nav-menu.scss
+++ b/src/styles/components/_nav-menu.scss
@@ -1,12 +1,19 @@
 .nav-menu{
-    position: absolute;
-    width:462px;
+    position: fixed;
+    width:100%;
     height:100vh;
     background-color:$mainBlueDark;
-    padding-top:149px;
+    padding-top:74px;
     top:0px;
-    left:-462px;
     transition: left .3s ease-out;
+    z-index:2;
+    left:-100vw;
+
+    @include responsive(large){
+        width:462px;
+        left:-462px;
+        padding-top:149px;
+    }
 
     &--visible{
         left:0px;
