--- a/src/styles/components/_wrapper.scss
+++ b/src/styles/components/_wrapper.scss
@@ -1,11 +1,31 @@
 .wrapper{
+    width:85%;
     max-width:1300px;
     margin:0 auto;
     position:relative;
 
-    &--extra-right-padding{
-        padding-right:300px;
+    &--extra-right-padding-large{
+        
+        @include responsive(large){
+            padding-right:300px;
+        }
     }
 
     @include clearfix;
+
+    &--full-width-small{
+        width:100%;
+
+        @include responsive(medium){
+            width:85%;
+        }
+    }
+
+    &--full-width-medium{
+        width:100%;
+
+        @include responsive(large){
+            width:85%;
+        }
+    }
 }
