--- a/src/styles/layout/_page-content.scss
+++ b/src/styles/layout/_page-content.scss
@@ -1,3 +1,7 @@
 .page-content{
-    padding-left:144px;
+
+    @include responsive(large){
+        padding-left:144px;
+        padding-top:0px;
+    }
 }
