Added lazy loading of images

--- a/src/styles/components/_amenities-grid.scss
+++ b/src/styles/components/_amenities-grid.scss
@@ -39,24 +39,24 @@
 
         &--large{
             height:100%;
-            background-image: url('../images/golf.png');
+            //background-image: url('../images/golf.png');
         }
 
-        &--fitness{
-            background-image: url('../images/fitness.png');
-        }
+        // &--fitness{
+        //     background-image: url('../images/fitness.png');
+        // }
 
-        &--pool{
-            background-image: url('../images/pool.png');
-        }
+        // &--pool{
+        //     background-image: url('../images/pool.png');
+        // }
 
-        &--tennis{
-            background-image: url('../images/tennis.png');
-        }
+        // &--tennis{
+        //     background-image: url('../images/tennis.png');
+        // }
 
-        &--events{
-            background-image: url('../images/special_events.png');
-        }
+        // &--events{
+        //     background-image: url('../images/special_events.png');
+        // }
     }
 
     &__link{
