--- a/src/styles/components/_membership-block.scss
+++ b/src/styles/components/_membership-block.scss
@@ -1,5 +1,5 @@
 .membership-block{
-    background-image: url('../images/membership_texture.png');
+    //background-image: url('../images/membership_texture.png');
     background-size: cover;
     background-position: center;
     padding: 40px 0;
