--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    background-image: url('../images/footer-texture.png');
+    //background-image: url('../images/footer-texture.png');
     background-repeat:no-repeat;
     background-size:cover;
     background-position: top;
